# cli-agent-orchestrator

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BEADS_RALPH_WEBUI.md  CAO_UI_BUGFIXES.md  CHANGELOG.md  CLAUDE.md  CODEBASE.md  DEVELOPMENT.md  GEMINI.md.cao_backup  LOCAL-PATCHES.md  LOCAL_CAO-TESTING.md  PRD-001-auto-mode-immediate-assign.md  PRD-BEADS-EPIC-ORCHESTRATION.md  PRD-CAO-DASHBOARD-FIXES.md  README.md  README.zh-CN.md  coverage.json  coverage2.json  data_analysis_report_template.md  mypy.ini  pyproject.toml  sonar-project.properties  test_client.py  test_issue_80.md  test_polling.sh  tmux-install.sh
.beads/: issues.jsonl
.github/: copilot-instructions.md
.kiro/: ralph-loop.local.json
aidlc-docs/: MEMORY_SYSTEM_DESIGN.md  MEMORY_SYSTEM_PROPOSAL.md  aidlc-state.md  audit.md  success-criteria.md
cao_mcp_apps/: package-lock.json  package.json
development_reports/: phase_3_opencode_provider_runtime.md  phase_4_opencode_e2e_and_docs.md  phase_5_opencode_native_skills.md  phase_6_config_dir_rename.md
docs/: ACP_Discovery.md  CAO_BEADS_ORCHESTRATION_PRD.md  CAO_BEADS_UI_DESIGN.md  PLAN-omp-cli.md  api.md  (+45 more)
examples/plugins/cao-memory-claude-code/: README.md  pyproject.toml
examples/plugins/cao-memory-claude-code/cao_memory_claude_code/: __init__.py  plugin.py
examples/plugins/cao-memory-claude-code/tests/: test_plugin.py
examples/plugins/cao-memory-kiro-cli/: README.md  pyproject.toml
examples/plugins/cao-memory-kiro-cli/cao_memory_kiro_cli/: __init__.py  plugin.py
examples/plugins/cao-memory-kiro-cli/tests/: test_kiro_cli_memory.py
(+791 files in other folders)
