[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cao-memory-claude-code"
version = "0.1.0"
description = "Claude Code memory-injection plugin for CLI Agent Orchestrator"
requires-python = ">=3.10"
dependencies = [
    "cli-agent-orchestrator",
]

[project.entry-points."cao.plugins"]
claude_code_memory = "cao_memory_claude_code.plugin:ClaudeCodeMemoryPlugin"
